--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,9 +23,20 @@
     <%= f.password_field :password_confirmation, class: "form-control", required: true %>
   </div>
 
+  <!-- <div class = "form-group">
+     <label><input type="radio" id="user_role_Link" name="user[role]" value="Link">Links</label>
+     <label><input type="radio" id="user_role_Url" name="user[role]" value="Url" />Urls</label>
+  </div> -->
+
+  <div>
+  <%= f.radio_button :role, "Link"%> <%= f.label :Link, "Link"%>
+  <%= f.radio_button :role, "Url" %> <%= f.label :Url, "Url"%>
+  </div>
+
   <div class="form-group">
     <%= f.submit "Sign up", class: "btn btn-lg btn-primary" %>
   </div>
 <% end %>
+
 
 <%= render "devise/shared/links" %>
