--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
      <ul class="nav nav-tabs">
        <div class="col-md-6">
          <ul class="nav navbar-nav navbar-left">
-           <li><%=link_to 'RaddiT', root_path, class: "head" %></li>
+           <li><%=link_to 'RaddiT', homecheck , class: "head" %></li>
          </ul>
 		    </div>
 
